# mcp-server-ms-paint

./: ai_client.py  app.py  pyproject.toml
mcpserver_paint.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
